--- a/DFC.App.ContactUs.UI.FunctionalTests/DFC.App.ContactUs.UI.FunctionalTests.csproj
+++ b/DFC.App.ContactUs.UI.FunctionalTests/DFC.App.ContactUs.UI.FunctionalTests.csproj
@@ -28,6 +28,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="appsettings.project.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="appsettings.environment.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="appsettings.environment.template.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
